MDEV-4514 After increasing user name length mysql.db is reported broken and event scheduler does not start